# Itmo

./: A1.java  token
Algoritms/Lab_1/A2/: A2.java
Algoritms/Lab_1/A3/: A3.java
Algoritms/Lab_1/A4/: A4.java
Java/HomeWorkPCMS/: ProblemA.java  ProblemB.java  ProblemI.java  ProblemJ.java  ProblemM.java
Java/MyScanner/: MyScanner.java  Reverse.java  ReverseAbc.java  WordStatInput.java
Java/Reverse/: Reverse.java  ReverseTranspose.java
Java/RunMe/: RunMe.java
Java/Sum/: Sum.java  SumDouble.java
Java/WordStatInput/: WordStatInput.java  WordStatWordsSuffix.java
Java/Wspp/: Wspp.java  WsppCountPosition.java
Java/game/: BadRandomPlayer.java  Board.java  Cell.java  Game.java  HumanPlayer.java  Main.java  MnkBoard.java  Move.java  Player.java  Position.java  RandomPlayer.java  Result.java  SequentialPlayer.java
MatAn/lab1/: MatAnLab1.java
MatAn/lab2/: lab2.java
programs/term2/C++/lab2/: C++_example.cpp  CMakeLists.txt  comands.txt  main.c  return_codes.h  workingBuild.txt
programs/term3/Python/06.1.ModulesPackagesImport/tasks/steganography_tool/: .tester.json  README.md  pyproject.toml  test_cli.py  test_module.py  test_public.py
programs/term3/Python/06.1.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/: __init__.py  cli.py
programs/term3/Python/06.1.ModulesPackagesImport/tasks/steganography_tool/steganography_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
programs/term3/Python/06.1.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/steganography_tool.egg-info/: SOURCES.txt
(+2037 files in other folders)
